# mllab-numerical-optimization

./: .gitignore  README.md  pyproject.toml  quadratic_forms_gd_results.parquet  quadratic_forms_gd_results_3000_iters.parquet
notebooks/: modify_notebook.py  quadratic_optimization.ipynb
src/adaptive-gd/: adg_vs_optimal.py  best_step_size.py  quadratic_forms.py  scratchpad.py
