[project]
name = "mllab-numerical-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "ruff>=0.14.7",
    "scipy>=1.16.3",
]
