[project]
name = "mllab-numerical-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax[cuda12]>=0.8.1",
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "python-decouple>=3.8",
    "pyzmq>=27.1.0",
    "ruff>=0.14.7",
    "scipy>=1.16.3",
    "wandb>=0.23.1",
]
